Add aggregate pushdown for decision engine
